bro can this pls fix the spacing

--- a/src/components/PageWrapper/PageWrapper.module.scss
+++ b/src/components/PageWrapper/PageWrapper.module.scss
@@ -8,7 +8,6 @@
     animation-name: load;
     display: flex;
     justify-content: center;
-    min-height: calc(100vh - #{constants.$navbar-height});
     transition: opacity constants.$transition-time,
         transform constants.$transition-time;
     width: 100%;
